wm/fvwm/patches/patch-configure
$NetBSD: patch-configure,v 1.3 2023/01/18 07:43:16 vins Exp $

(1)
Convert install path from fvwm to fvwm2
This can not be done with
CONFIGURE_ARGS+=        --datarootdir=${PREFIX:Q}/share/fvwm2
this will install fvwm2/fvwm.

(2)
Avoid following problem on NetBSD/amd64 with clang
+-----------------
| conftest.c:38:3: error: non-void function 'main' should return a value [-Wreturn-type]
|   return;
|   ^
+-----------------

--- configure.orig	2022-10-20 19:05:33.000000000 +0000
+++ configure
@@ -609,7 +609,7 @@ MFLAGS=
 MAKEFLAGS=
 
 # Identity of this package.
-PACKAGE_NAME='fvwm'
+PACKAGE_NAME='fvwm2'
 PACKAGE_TARNAME='fvwm'
 PACKAGE_VERSION='2.7.0'
 PACKAGE_STRING='fvwm 2.7.0'
@@ -3698,7 +3698,7 @@ fi
 
 
 # Define the identity of the package.
- PACKAGE='fvwm'
+ PACKAGE='fvwm2'
  VERSION='2.7.0'
 
 
